[gd_scene load_steps=19 format=3 uid="uid://cl2hntmpl3rlm"]

[ext_resource type="Texture2D" uid="uid://hmy4pgxx6mcj" path="res://assets/sprites/tanks/tank-splashes/tank-splash-button.png" id="1_yl0fu"]
[ext_resource type="Script" path="res://scripts/tank-plash-button.gd" id="2_fvka8"]
[ext_resource type="Texture2D" uid="uid://bmi7slbv4gc67" path="res://assets/sprites/tanks/tank-splashes/basic.png" id="3_76k8m"]
[ext_resource type="Texture2D" uid="uid://bvnqqgstmecfs" path="res://assets/sprites/tanks/tank-splashes/crush.png" id="4_rv67f"]
[ext_resource type="Texture2D" uid="uid://bsm8kk5qcslpx" path="res://assets/sprites/tanks/tank-splashes/assault.png" id="5_hb8bn"]
[ext_resource type="Texture2D" uid="uid://clhlqoaf2bmf6" path="res://assets/sprites/tanks/tank-splashes/destroy.png" id="6_sfgqe"]
[ext_resource type="FontFile" uid="uid://dg31axhh41bjd" path="res://assets/fonts/prototype.ttf" id="7_punb7"]

[sub_resource type="Animation" id="Animation_wc6by"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_8d5e3"]
resource_name = "click"
length = 0.2
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.02, 0.07, 0.11, 0.19),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.588235), Color(1, 1, 1, 1), Color(1, 1, 1, 0.588235), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.406126, 1),
"update": 0,
"values": [Vector2(1.3, 1.3), Vector2(1, 1)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"on_finish"
}]
}

[sub_resource type="Animation" id="Animation_i1oqh"]
resource_name = "focus"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.267943, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.15, 1.15)]
}

[sub_resource type="Animation" id="Animation_awbcd"]
resource_name = "init"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_0s2v7"]
resource_name = "unfocus"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.406126, 1),
"update": 0,
"values": [Vector2(1.15, 1.15), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g4m0n"]
_data = {
"RESET": SubResource("Animation_wc6by"),
"click": SubResource("Animation_8d5e3"),
"focus": SubResource("Animation_i1oqh"),
"init": SubResource("Animation_awbcd"),
"unfocus": SubResource("Animation_0s2v7")
}

[sub_resource type="LabelSettings" id="LabelSettings_boxpn"]
font = ExtResource("7_punb7")
font_size = 34
shadow_size = 13
shadow_color = Color(0, 0, 0, 0.454902)

[sub_resource type="Animation" id="Animation_rq52n"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TankName:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-129, 42)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TankName:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_5vhv5"]
resource_name = "hide"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TankName:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(2.21914, 1),
"update": 0,
"values": [Vector2(-129, 104), Vector2(-129, 42)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TankName:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(2.21914, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_b756q"]
resource_name = "show"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TankName:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.307786, 1),
"update": 0,
"values": [Vector2(-129, 42), Vector2(-129, 104)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TankName:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.307786, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sa546"]
_data = {
"RESET": SubResource("Animation_rq52n"),
"hide": SubResource("Animation_5vhv5"),
"show": SubResource("Animation_b756q")
}

[node name="TankSplashButton" type="Sprite2D"]
modulate = Color(1, 1, 1, 0)
position = Vector2(0, 1)
texture = ExtResource("1_yl0fu")
script = ExtResource("2_fvka8")
tank_textures = Array[CompressedTexture2D]([ExtResource("3_76k8m"), ExtResource("4_rv67f"), ExtResource("5_hb8bn"), ExtResource("6_sfgqe")])

[node name="TankSprite" type="Sprite2D" parent="."]
rotation = -2.35619
scale = Vector2(0.65, 0.65)
texture = ExtResource("5_hb8bn")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_g4m0n")
}

[node name="Button" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -95.0
offset_top = -96.0
offset_right = -95.0
offset_bottom = -96.0
grow_horizontal = 2
grow_vertical = 2

[node name="TankName" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
show_behind_parent = true
offset_left = -129.0
offset_top = 42.0
offset_right = 128.0
offset_bottom = 87.0
text = "Assault"
label_settings = SubResource("LabelSettings_boxpn")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextAnimations" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_sa546")
}

[node name="ClickDelay" type="Timer" parent="."]
wait_time = 0.35
one_shot = true
autostart = true

[connection signal="mouse_entered" from="Button" to="." method="_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="ClickDelay" to="." method="_on_click_delay_timeout"]
